
2019-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: #543 check for condition-name in ADDRESS OF

2019-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: minor refactoring for file related output
	* parser.y: minor refactoring - use of set_current_field to remove
	  duplicated code, limit scope of some variables
	* parser.y: new identifier_field (checked field-identifier),
	  adjustment of some msgIds (obviously not part of any test before)

2019-12-01  Ron Norman <rjn@inglenet.com>

	* field.c, sqlxfdgen.c: Fix up some compile warnings
	  moved cb_parse_xfd from field.c to sqlxfdgen.c

2019-11-30  Ron Norman <rjn@inglenet.com> 

	* sqlxfdgen.c: Starter version to create DDL/XD files from record
	  descriptions and $XFD directives (more to come)

2019-11-28  Ron Norman <rjn@inglenet.com>

	* Updates to prepare framework for generated
	  an exernal file description and SQL
	  and adding support for ODBC/OCI use for INDEXED file

2019-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_key_components): extracted
	  from (output_file_initialization)
	* codegen.c (perform_label): minor refactoring
	* codgenc.c: call output_storage instead of output where the result is
	  fixed to be in the header
	* tree.h, parser.y: added flag_entry_for_goto to cb_field

2019-11-18  Ron Norman <rjn@inglenet.com>

	* tree.h, parser.y, typeck.c: Updates to support 
	  SET ... TO ADDRESS OF FH--FCD OF file
	  SET ... TO ADDRESS OF FH--KEYDEF OF file

2019-11-17  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_header): use current output target instead of
	  file pointer
	* codegen.c (output_indent): replaced by new functions
	  (output_block_open, output_block_close)
	* codegen.c: count lines in generated source file in output_line_number,
	  to do so adjust many calls to use the "correct" output function and never
	  include a newline within the output string
	* codegen.c (codegen), tree.h, cobc.c: adjust function to get generated